@@ -110,6 +110,7 @@ bool truncateFile(PlatformFileHandle handle, long long offset)
     return !ftruncate(handle, offset);
 }
 
+#if !PLATFORM(ANDROID)
 int writeToFile(PlatformFileHandle handle, const char* data, int length)
 {
     do {
@@ -119,6 +120,7 @@ int writeToFile(PlatformFileHandle handle, const char* data, int length)
     } while (errno == EINTR);
     return -1;
 }
+#endif
 
 int readFromFile(PlatformFileHandle handle, char* data, int length)
 {
